# Stair-cleaning-robot

./: CMakeLists.txt  README.md  reset_servos.py
include/: controller.h  detector.h  servo.h
src/: main.cpp
src/camera/: detector.cpp
src/control/: controller.cpp
src/servo/: servo.cpp
